# creditFraud

./: .gitattributes  README.md  pyproject.toml  requirements.txt
finddefault/: __init__.py  input_test_UI.csv
model training/: Randomforest_smoteENN_FD.ipynb  Randomforest_smote_FD.ipynb  XGB_smote_FD.ipynb  lightGBM_smoteENN_FD.ipynb  voting_FD.ipynb
models/: .gitattributes  lightgbm_adasyn_FD.joblib  lightgbm_smoteENN_FD.joblib  lightgbm_smote_FD.joblib  xgb_adasyn_FD.joblib  xgb_smoteENN_FD.joblib  xgb_smote_FD.joblib
notebooks/: Randomforest_adasyn_FD.ipynb  XGB_adasyn_FD.ipynb  XGB_smoteENN_FD.ipynb  lightGBM_adasyn_FD.ipynb  lightGBM_smote_FD.ipynb
saved models/: lightgbm_adasyn_FD.joblib  lightgbm_smoteENN_FD.joblib  lightgbm_smote_FD.joblib  rf_adasyn_FD.joblib  rf_smoteENN_FD.joblib  rf_smote_FD.joblib  xgb_adasyn_FD.joblib  xgb_smoteENN_FD.joblib  xgb_smote_FD.joblib
